Signed-off-by: han_lru <han_lru@163.com>

--- a/richplay/res/values/strings.xml
+++ b/richplay/res/values/strings.xml
@@ -58,6 +58,7 @@
     <string name="jiaoyu">教育學校</string>
     <string name="renzhi">任職公司</string>
     <string name="wolaifayan">我來發言</string>
+    <string name="addguanzhu">添加關注</string>
 
     <string-array name="home_tab_tag">
         <item>首頁</item>
